--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2847,7 +2847,7 @@ fieldset[disabled] .checkbox, fieldset[disabled] .checkbox input[type=checkbox],
       position: relative;
       max-width: 800px;
       margin: auto;
-      background: #fff;
+      background: #f2f2f2;
       box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
       padding: 25px;
       border-radius: 25px;
